--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disability Benefits Programs</title>
+    <title>3.1 Disability Benefits Programs</title>
     <style>
         /* Scoped reset — overrides Webflow global styles inside our widget */
         .dbp-widget {
@@ -229,7 +229,7 @@
 
 <div class="dbp-widget">
 
-    <h1>Disability Benefits Programs</h1>
+    <h2>3.1 Disability Benefits Programs</h2>
 
     <section>
         <p>[Placeholder: Explanation of how to use this tool will go here.]</p>
@@ -238,7 +238,7 @@
     <hr class="section-divider">
 
     <section>
-        <h2>Summary of Benefits Programs</h2>
+        <h2>3.2 Summary of Benefits Programs</h2>
         <ul>
             <li>Canada Disability Benefit (CDB)</li>
             <li>Disability Tax Credit (DTC)</li>
@@ -252,12 +252,12 @@
     <hr class="section-divider">
 
     <section>
-        <h2 class="indented-title">Benefits</h2>
+        <h2 class="indented-title">3.3 Benefits</h2>
 
         <!-- 1.1 Canada Disability Benefit -->
         <div class="benefit-item">
             <div class="benefit-trigger" onclick="toggleBenefit('cdb-content', this)">
-                <span class="benefit-arrow">▶</span><span class="benefit-number">1.1</span>&nbsp;<span class="benefit-title">Canada Disability Benefit (CDB)</span>
+                <span class="benefit-arrow">▶</span><span class="benefit-number">3.3.1</span>&nbsp;<span class="benefit-title">Canada Disability Benefit (CDB)</span>
             </div>
             <div class="benefit-content" id="cdb-content">
                 <div class="benefit-content-inner">
@@ -298,7 +298,7 @@
         <!-- 1.2 Disability Tax Credit -->
         <div class="benefit-item">
             <div class="benefit-trigger" onclick="toggleBenefit('dtc-content', this)">
-                <span class="benefit-arrow">▶</span><span class="benefit-number">1.2</span>&nbsp;<span class="benefit-title">Disability Tax Credit (DTC)</span>
+                <span class="benefit-arrow">▶</span><span class="benefit-number">3.3.2</span>&nbsp;<span class="benefit-title">Disability Tax Credit (DTC)</span>
             </div>
             <div class="benefit-content" id="dtc-content">
                 <div class="benefit-content-inner">
