--- a/programs.html
+++ b/programs.html
@@ -223,6 +223,12 @@
             margin-top: 4px !important;
             margin-bottom: 8px !important;
         }
+
+        @media (min-width: 768px) {
+        .dbp-widget {
+        font-size: 18px !important;
+        }
+    }
     </style>
 </head>
 <body>
