--- a/programs.html
+++ b/programs.html
@@ -967,8 +967,8 @@
 
                             <hr class="content-divider">
                             <div class="eligibility-checklist">
-                                <label><input type="checkbox" data-group="gap-main" value="a" onchange="handleGapCheckbox(this, 'gap-continue-main')"> <strong>Option A:&nbsp;</strong>Determine Your Benefit Amount</label>
-                                <label><input type="checkbox" data-group="gap-main" value="b" onchange="handleGapCheckbox(this, 'gap-continue-main')"> <strong>Option B:&nbsp;</strong>Learn More About The Program</label>
+                                <label><input type="checkbox" data-group="gap-main" value="a" onchange="handleGapCheckbox(this, 'gap-continue-main')"> <strong>Option&nbsp;A:&nbsp;</strong>Determine Your Benefit Amount</label>
+                                <label><input type="checkbox" data-group="gap-main" value="b" onchange="handleGapCheckbox(this, 'gap-continue-main')"> <strong>Option&nbsp;B:&nbsp;</strong>Learn More About The Program</label>
                             </div>
                             <div id="gap-continue-main" class="gap-continue-section">
                                 <hr class="content-divider">
@@ -1459,11 +1459,11 @@
             <p style="margin-bottom: 10px;">Please select your preferred option:</p>
             <label>
                 <input type="checkbox" data-group="gap-next" value="a" onchange="handleGapCheckbox(this, 'gap-continue-next')">
-                Option A: Determine Your Benefit Amount
+                Option&nbsp;A: Determine Your Benefit Amount
             </label>
             <label style="display: block; margin-top: 8px;">
                 <input type="checkbox" data-group="gap-next" value="b" onchange="handleGapCheckbox(this, 'gap-continue-next')">
-                Option B: Learn More About The Program
+                Option&nbsp;B: Learn More About The Program
             </label>
             <div id="gap-continue-next" class="gap-continue-section">
                 <hr class="content-divider">
