--- a/programs.html
+++ b/programs.html
@@ -286,7 +286,7 @@
             .navigation.programs { padding: 12px 20px 16px; }
 
             .navigation.programs.w-nav::after {
-                max-width: calc(100% - 40px);
+                display: none;
             }
 
             /* Push hamburger to far right */
