--- a/programs.html
+++ b/programs.html
@@ -716,7 +716,7 @@
             width: 260px;
             max-width: 100%;
             aspect-ratio: 16 / 9;
-            background: linear-gradient(145deg, #1a3a5c 0%, #0d2237 100%);
+            background: #0d2237 url('https://vumbnail.com/1169202696.jpg') center / cover no-repeat;
             border-radius: 8px;
             cursor: pointer;
             overflow: hidden;
